--- a/docker/shadowsocks-go/config_sample.json
+++ b/docker/shadowsocks-go/config_sample.json
@@ -1,8 +1,7 @@
 {
     "server":"0.0.0.0",
-    "server_port":9000,
+    "server_port":80,
     "local_port":1080,
-    "password":"password0",
-    "method":"aes-256-cfb",
+    "password":"170826",
     "timeout":120
 }
