--- a/docker/shadowsocks-python/config_sample.json
+++ b/docker/shadowsocks-python/config_sample.json
@@ -1,9 +1,9 @@
 {
     "server":"0.0.0.0",
-    "server_port":9000,
+    "server_port":80,
     "local_address":"127.0.0.1",
     "local_port":1080,
-    "password":"password0",
+    "password":"170826",
     "timeout":120,
     "method":"aes-256-cfb",
     "fast_open":true
