--- a/docker/shadowsocks-r/config_sample.json
+++ b/docker/shadowsocks-r/config_sample.json
@@ -1,10 +1,10 @@
 {
     "server":"0.0.0.0",
     "server_ipv6":"::",
-    "server_port":9000,
+    "server_port":80,
     "local_address":"127.0.0.1",
     "local_port":1080,
-    "password":"password0",
+    "password":"170826",
     "timeout":120,
     "method":"aes-256-cfb",
     "protocol":"origin",
